Force max perm gen size when using jdk7