@@ -34,6 +34,9 @@ BaseUtil(){
 			echo [$(timestamp log)] [ INFO_ ] Configuring Liferay to use JDK7...
 			export JAVA_HOME="C:\Program Files\Java\jdk1.7.0_80"
 			echo [$(timestamp log)] [ INFO_ ] Done.
+			echo [$(timestamp log)] [ INFO_ ] Forcing max perm gen space to 1GB...
+			export ANT_OPTS="${ANT_OPTS} -XX:MaxPermSize=1024m"
+			echo [$(timestamp log)] [ INFO_ ] Done.
 		fi
 	}
 
